align center (attempt to fix left shift)

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #F2E8DC; 
     color: #1A2601;
+    text-align: center;
 
 }
 
@@ -169,9 +170,9 @@ figure img
 }
 
 #video{
+    text-align: center;
     padding-left: 5m;
     padding-right: 5em;
-    text-align: center; 
     color: #1B3946;
 }
 
